# liberasurecode

./: .travis.yml  Cargo.toml  README.md  build.rs  install_dependent_libraries.sh  install_deps.sh  liberasurecode.patch  liberasurecode_configure_ac.patch  no_error_address_of_packed_member.patch
src/: c_api.rs  lib.rs  result.rs
